unfinished css halfway checkpoint

--- a/index.html
+++ b/index.html
@@ -7,5 +7,53 @@
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div class="bg-darkgray p-2l p-1b">
+        <img src="./assets/logo.png" alt="amazon logo" />
+      </div>
+      <nav class="bg-gray p-2l p-1tb">
+        <a class="c-white links p-1l" href="#">All</a>
+        <a class="c-white links p-1l" href="#">Today's deals</a>
+        <a class="c-white links p-1l" href="#">Customer Service</a>
+        <a class="c-white links p-1l" href="#">Registry</a>
+        <a class="c-white links p-1l" href="#">Gift Cards</a>
+        <a class="c-white links p-1l" href="#">Sell</a>
+      </nav>
+    </header>
+    <main>
+      <div class="bg-orange centered"><p class="c-white p-1tb">Shop All Holiday Gift Cards</p></div>
+      <section class="centered m-2t">
+        <h1 class="c-white xx-large bold p-1b">Holiday Gift Guides</h1>
+        <p class="c-white x-large bold">Be a go-gifter</p>
+      </section>
+      <article class="m-2t">
+        <p class="x-large p-2tb p-2l">
+          Find the perfect gift<a class="c-blue links p-1l small bold" href="#">Shop now</a>
+        </p>
+        <div>
+          <div class="overflowed card"><img class="card-img" src="./assets/img_1.jpg" alt="tablet photo" /></div>
+          <div class="overflowed card"><img class="card-img" src="./assets/img_2.jpg" alt="desk photo" /></div>
+          <div class="overflowed card"><img class="card-img" src="./assets/img_3.jpg" alt="watches photo" /></div>
+          <div class="overflowed card"><img class="card-img" src="./assets/img_4.jpg" alt="animals photo" /></div>
+        </div>
+      </article>
+      <div>
+        <div><img src="./assets/img_9.png" alt="vr photo" /></div>
+        <p>Play the gifting game</p>
+        <a href="#">Shop gaming</a>
+      </div>
+      <div>
+        <div><img src="./assets/img_10.png" alt="bedroom photo" /></div>
+        <p>The sound of cheer</p>
+        <a href="#">Shop Audio & Accessories</a>
+      </div>
+    </main>
+    <footer>
+      <a class="bg-gray" href="#">Back to top</a>
+      <div>
+        <img src="./assets/logo.png" alt="amazon logo" />
+      </div>
+    </footer>
+  </body>
 </html>
