h 17:00 commit with minor fixes needed

--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
         <img src="./assets/logo.png" alt="amazon logo" />
       </div>
       <nav class="bg-gray p-2l p-1tb">
-        <a class="c-white links p-1l" href="#">All</a>
-        <a class="c-white links p-1l" href="#">Today's deals</a>
-        <a class="c-white links p-1l" href="#">Customer Service</a>
-        <a class="c-white links p-1l" href="#">Registry</a>
-        <a class="c-white links p-1l" href="#">Gift Cards</a>
-        <a class="c-white links p-1l" href="#">Sell</a>
+        <a class="c-white links p-1l bold small" href="#">All</a>
+        <a class="c-white links p-1l bold small" href="#">Today's deals</a>
+        <a class="c-white links p-1l bold small" href="#">Customer Service</a>
+        <a class="c-white links p-1l bold small" href="#">Registry</a>
+        <a class="c-white links p-1l bold small" href="#">Gift Cards</a>
+        <a class="c-white links p-1l bold small" href="#">Sell</a>
       </nav>
     </header>
     <main>
-      <div class="bg-orange centered"><p class="c-white p-1tb">Shop All Holiday Gift Cards</p></div>
+      <div class="bg-orange centered"><p class="c-white p-1tb semibold">Shop All Holiday Gift Cards</p></div>
       <section class="centered m-2t">
         <h1 class="c-white xx-large bold p-1b">Holiday Gift Guides</h1>
         <p class="c-white x-large bold">Be a go-gifter</p>
@@ -31,27 +31,29 @@
         <p class="x-large p-2tb p-2l">
           Find the perfect gift<a class="c-blue links p-1l small bold" href="#">Shop now</a>
         </p>
-        <div>
+        <div class="centered">
           <div class="overflowed card"><img class="card-img" src="./assets/img_1.jpg" alt="tablet photo" /></div>
           <div class="overflowed card"><img class="card-img" src="./assets/img_2.jpg" alt="desk photo" /></div>
           <div class="overflowed card"><img class="card-img" src="./assets/img_3.jpg" alt="watches photo" /></div>
           <div class="overflowed card"><img class="card-img" src="./assets/img_4.jpg" alt="animals photo" /></div>
         </div>
       </article>
-      <div>
-        <div><img src="./assets/img_9.png" alt="vr photo" /></div>
-        <p>Play the gifting game</p>
-        <a href="#">Shop gaming</a>
+      <div class="m-2t">
+        <div><img class="img-resize" src="./assets/img_9.png" alt="vr photo" /></div>
+        <p class="x-large centered p-2b p-1t semibold">
+          Play the gifting game <a class="c-blue links p-1l small bold" href="#">Shop gaming</a>
+        </p>
       </div>
       <div>
-        <div><img src="./assets/img_10.png" alt="bedroom photo" /></div>
-        <p>The sound of cheer</p>
-        <a href="#">Shop Audio & Accessories</a>
+        <div><img class="img-resize" src="./assets/img_10.png" alt="bedroom photo" /></div>
+        <p class="x-large centered p-2b p-1t semibold">
+          The sound of cheer <a class="c-blue links p-1l small bold" href="#">Shop Audio & Accessories</a>
+        </p>
       </div>
     </main>
     <footer>
-      <a class="bg-gray" href="#">Back to top</a>
-      <div>
+      <div class="bg-gray p-2tb centered"><a class="c-white centered bold" href="#">Back to top</a></div>
+      <div class="bg-darkgray centered p-4tb">
         <img src="./assets/logo.png" alt="amazon logo" />
       </div>
     </footer>
