--- a/index.html
+++ b/index.html
@@ -31,11 +31,19 @@
         <p class="x-large p-2tb p-2l">
           Find the perfect gift<a class="c-blue links p-1l small bold" href="#">Shop now</a>
         </p>
-        <div class="centered">
-          <div class="overflowed card"><img class="card-img" src="./assets/img_1.jpg" alt="tablet photo" /></div>
-          <div class="overflowed card"><img class="card-img" src="./assets/img_2.jpg" alt="desk photo" /></div>
-          <div class="overflowed card"><img class="card-img" src="./assets/img_3.jpg" alt="watches photo" /></div>
-          <div class="overflowed card"><img class="card-img" src="./assets/img_4.jpg" alt="animals photo" /></div>
+        <div class="centered p-2b">
+          <div class="overflowed shadowed card m-3r">
+            <img class="card-img" src="./assets/img_1.jpg" alt="tablet photo" />
+          </div>
+          <div class="overflowed shadowed card m-3r">
+            <img class="card-img" src="./assets/img_2.jpg" alt="desk photo" />
+          </div>
+          <div class="overflowed shadowed card m-3r">
+            <img class="card-img" src="./assets/img_3.jpg" alt="watches photo" />
+          </div>
+          <div class="overflowed shadowed card">
+            <img class="card-img" src="./assets/img_4.jpg" alt="animals photo" />
+          </div>
         </div>
       </article>
       <div class="m-2t">
